--- a/www/templates/join.html
+++ b/www/templates/join.html
@@ -1,5 +1,5 @@
 <form class="join-form">
 	<legend>Join game</legend>
 	<button type="button" class="btn join">Join</button>
-	<button type="button" class="btn view">View</button>
+	<button type="button" class="btn watch">Watch</button>
 </form>
