--- a/www/templates/join.html
+++ b/www/templates/join.html
@@ -2,4 +2,5 @@
 	<legend>Join game</legend>
 	<button type="button" class="btn join">Join</button>
 	<button type="button" class="btn watch">Watch</button>
+	<button type="button" class="btn nuke">Nuke</button>
 </form>
