Add some svg images

--- a/www/templates/board.html
+++ b/www/templates/board.html
@@ -2,64 +2,64 @@
     <table class="table striped">
       <tbody>
 	<tr>
-           <td>X</td>
-           <td>X</td>
-           <td>X</td>
-           <td>X</td>
-           <td>X</td>
-           <td>X</td>
-           <td>X</td>
-           <td>X</td>
+           <td><img src='/img/empty.svg' /></td>
+           <td><img src='/img/empty.svg' /></td>
+           <td><img src='/img/empty.svg' /></td>
+           <td><img src='/img/empty.svg' /></td>
+           <td><img src='/img/empty.svg' /></td>
+           <td><img src='/img/empty.svg' /></td>
+           <td><img src='/img/empty.svg' /></td>
+           <td><img src='/img/empty.svg' /></td>
         </tr>
         <tr>
-           <td>X</td>
-           <td>X</td>
-           <td>X</td>
-           <td>X</td>
-           <td>X</td>
-           <td>X</td>
-           <td>X</td>
-           <td>X</td>
+           <td><img src='/img/empty.svg' /></td>
+           <td><img src='/img/empty.svg' /></td>
+           <td><img src='/img/empty.svg' /></td>
+           <td><img src='/img/blue.svg' /></td>
+           <td><img src='/img/empty.svg' /></td>
+           <td><img src='/img/empty.svg' /></td>
+           <td><img src='/img/empty.svg' /></td>
+           <td><img src='/img/empty.svg' /></td>
         </tr>
         <tr>
-           <td>X</td>
-           <td>X</td>
-           <td>O</td>
-           <td>X</td>
-           <td>O</td>
-           <td>O</td>
-           <td>X</td>
-           <td>X</td>
+           <td><img src='/img/empty.svg' /></td>
+           <td><img src='/img/empty.svg' /></td>
+           <td><img src='/img/empty.svg' /></td>
+           <td><img src='/img/empty.svg' /></td>
+           <td><img src='/img/red.svg' /></td>
+           <td><img src='/img/red.svg' /></td>
+           <td><img src='/img/empty.svg' /></td>
+           <td><img src='/img/empty.svg' /></td>
         </tr>
         <tr>
-           <td>O</td>
-           <td>X</td>
-           <td>O</td>
-           <td>O</td>
-           <td>X</td>
-           <td>X</td>
-           <td>X</td>
-           <td>X</td>
+           <td><img src='/img/empty.svg' /></td>
+           <td><img src='/img/empty.svg' /></td>
+           <td><img src='/img/empty.svg' /></td>
+           <td><img src='/img/empty.svg' /></td>
+           <td><img src='/img/empty.svg' /></td>
+           <td><img src='/img/blue.svg' /></td>
+           <td><img src='/img/empty.svg' /></td>
+           <td><img src='/img/empty.svg' /></td>
         </tr>
         <tr>
-           <td>O</td>
-           <td>O</td>
-           <td>X</td>
-           <td>O</td>
-           <td>O</td>
-           <td>O</td>
-           <td>O</td>
-           <td>X</td>
+           <td><img src='/img/empty.svg' /></td>
+           <td><img src='/img/empty.svg' /></td>
+           <td><img src='/img/empty.svg' /></td>
+           <td><img src='/img/red.svg' /></td>
+           <td><img src='/img/empty.svg' /></td>
+           <td><img src='/img/empty.svg' /></td>
+           <td><img src='/img/empty.svg' /></td>
+           <td><img src='/img/empty.svg' /></td>
         </tr>
         <tr>
-           <td>X</td>
-           <td>X</td>
-           <td>O</td>
-           <td>O</td>
-           <td>O</td>
-           <td>X</td>
-           <td>X</td>
-           <td>X</td>
+           <td><img src='/img/empty.svg' /></td>
+           <td><img src='/img/empty.svg' /></td>
+           <td><img src='/img/empty.svg' /></td>
+           <td><img src='/img/empty.svg' /></td>
+           <td><img src='/img/empty.svg' /></td>
+           <td><img src='/img/empty.svg' /></td>
+           <td><img src='/img/empty.svg' /></td>
+           <td><img src='/img/empty.svg' /></td>
         </tr>
 
       </tbody>
