--- a/www/templates/board.html
+++ b/www/templates/board.html
@@ -1,66 +1,56 @@
-    <%= user ? user.get('color'): 'watching' %>
-    <table class="table striped">
-      <tbody>
-	<tr>
-           <td><img src='/img/empty.svg' /></td>
-           <td><img src='/img/empty.svg' /></td>
-           <td><img src='/img/empty.svg' /></td>
-           <td><img src='/img/empty.svg' /></td>
-           <td><img src='/img/empty.svg' /></td>
-           <td><img src='/img/empty.svg' /></td>
-           <td><img src='/img/empty.svg' /></td>
-           <td><img src='/img/empty.svg' /></td>
-        </tr>
-        <tr>
-           <td><img src='/img/empty.svg' /></td>
-           <td><img src='/img/empty.svg' /></td>
-           <td><img src='/img/empty.svg' /></td>
-           <td><img src='/img/blue.svg' /></td>
-           <td><img src='/img/empty.svg' /></td>
-           <td><img src='/img/empty.svg' /></td>
-           <td><img src='/img/empty.svg' /></td>
-           <td><img src='/img/empty.svg' /></td>
-        </tr>
-        <tr>
-           <td><img src='/img/empty.svg' /></td>
-           <td><img src='/img/empty.svg' /></td>
-           <td><img src='/img/empty.svg' /></td>
-           <td><img src='/img/empty.svg' /></td>
-           <td><img src='/img/red.svg' /></td>
-           <td><img src='/img/red.svg' /></td>
-           <td><img src='/img/empty.svg' /></td>
-           <td><img src='/img/empty.svg' /></td>
-        </tr>
-        <tr>
-           <td><img src='/img/empty.svg' /></td>
-           <td><img src='/img/empty.svg' /></td>
-           <td><img src='/img/empty.svg' /></td>
-           <td><img src='/img/empty.svg' /></td>
-           <td><img src='/img/empty.svg' /></td>
-           <td><img src='/img/blue.svg' /></td>
-           <td><img src='/img/empty.svg' /></td>
-           <td><img src='/img/empty.svg' /></td>
-        </tr>
-        <tr>
-           <td><img src='/img/empty.svg' /></td>
-           <td><img src='/img/empty.svg' /></td>
-           <td><img src='/img/empty.svg' /></td>
-           <td><img src='/img/red.svg' /></td>
-           <td><img src='/img/empty.svg' /></td>
-           <td><img src='/img/empty.svg' /></td>
-           <td><img src='/img/empty.svg' /></td>
-           <td><img src='/img/empty.svg' /></td>
-        </tr>
-        <tr>
-           <td><img src='/img/empty.svg' /></td>
-           <td><img src='/img/empty.svg' /></td>
-           <td><img src='/img/empty.svg' /></td>
-           <td><img src='/img/empty.svg' /></td>
-           <td><img src='/img/empty.svg' /></td>
-           <td><img src='/img/empty.svg' /></td>
-           <td><img src='/img/empty.svg' /></td>
-           <td><img src='/img/empty.svg' /></td>
-        </tr>
+<%= user ? user.get('color'): 'watching' %>
+<div class="board">
+           <div class="mark"><img src='/img/empty.svg' /></div>
+           <div class="mark"><img src='/img/empty.svg' /></div>
+           <div class="mark"><img src='/img/empty.svg' /></div>
+           <div class="mark"><img src='/img/empty.svg' /></div>
+           <div class="mark"><img src='/img/empty.svg' /></div>
+           <div class="mark"><img src='/img/empty.svg' /></div>
+           <div class="mark"><img src='/img/empty.svg' /></div>
+           <div class="mark"><img src='/img/empty.svg' /></div>
 
-      </tbody>
-    </table>
+           <div class="mark"><img src='/img/empty.svg' /></div>
+           <div class="mark"><img src='/img/empty.svg' /></div>
+           <div class="mark"><img src='/img/empty.svg' /></div>
+           <div class="mark"><img src='/img/blue.svg' /></div>
+           <div class="mark"><img src='/img/empty.svg' /></div>
+           <div class="mark"><img src='/img/empty.svg' /></div>
+           <div class="mark"><img src='/img/empty.svg' /></div>
+           <div class="mark"><img src='/img/empty.svg' /></div>
+
+           <div class="mark"><img src='/img/empty.svg' /></div>
+           <div class="mark"><img src='/img/empty.svg' /></div>
+           <div class="mark"><img src='/img/empty.svg' /></div>
+           <div class="mark"><img src='/img/empty.svg' /></div>
+           <div class="mark"><img src='/img/red.svg' /></div>
+           <div class="mark"><img src='/img/red.svg' /></div>
+           <div class="mark"><img src='/img/empty.svg' /></div>
+           <div class="mark"><img src='/img/empty.svg' /></div>
+
+           <div class="mark"><img src='/img/empty.svg' /></div>
+           <div class="mark"><img src='/img/empty.svg' /></div>
+           <div class="mark"><img src='/img/empty.svg' /></div>
+           <div class="mark"><img src='/img/empty.svg' /></div>
+           <div class="mark"><img src='/img/empty.svg' /></div>
+           <div class="mark"><img src='/img/blue.svg' /></div>
+           <div class="mark"><img src='/img/empty.svg' /></div>
+           <div class="mark"><img src='/img/empty.svg' /></div>
+
+           <div class="mark"><img src='/img/empty.svg' /></div>
+           <div class="mark"><img src='/img/empty.svg' /></div>
+           <div class="mark"><img src='/img/empty.svg' /></div>
+           <div class="mark"><img src='/img/red.svg' /></div>
+           <div class="mark"><img src='/img/empty.svg' /></div>
+           <div class="mark"><img src='/img/empty.svg' /></div>
+           <div class="mark"><img src='/img/empty.svg' /></div>
+           <div class="mark"><img src='/img/empty.svg' /></div>
+
+           <div class="mark"><img src='/img/empty.svg' /></div>
+           <div class="mark"><img src='/img/empty.svg' /></div>
+           <div class="mark"><img src='/img/empty.svg' /></div>
+           <div class="mark"><img src='/img/empty.svg' /></div>
+           <div class="mark"><img src='/img/empty.svg' /></div>
+           <div class="mark"><img src='/img/empty.svg' /></div>
+           <div class="mark"><img src='/img/empty.svg' /></div>
+           <div class="mark"><img src='/img/empty.svg' /></div>
+</div>           
